--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run check-format --if-present
-    - run: npm run format --if-present
+   # - run: npm run check-format --if-present
+   # - run: npm run format --if-present
   #  - run: npm run test --if-present
