--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next start",
+		"start": "next start -p $PORT",
 		"lint": "next lint",
 		"prepare": "husky install",
 		"check-types": "tsc --pretty --noEmit",
